<resources>
    <string name="app_name">My Application2</string>
    <string name="Select">Select State</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Be Safe</string>
    <string name="second_fragment_label">Alert</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Be Safe</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dash_board">Dashboard</string>
    <string name="alerts_image">alerts_image</string>
    <string name="noti_alert">Alert</string>
    <string name="crime_map">Crime map</string>
    <string name="crime_map_desc">crime_map_desc</string>
    <string name="resource">Resource</string>
    <string name="resource_">resource_</string>
    <string name="tips">Tips</string>
    <string name="tip">tip</string>
    <string name="property_log">Property Log</string>
    <string name="property">property</string>
    <string name="alerts">Alerts</string>
    <string name="man_threatening_passerby_with_a_knife">Man Threatening passerby with a knife</string>
    <string name="jalan_sepanggar">Jalan Sepanggar</string>
    <string name="jalan_sepanggar_1_2_km">Jalan Sepanggar - 1.2 KM</string>
    <string name="_1_mins_ago">1 mins ago</string>
    <string name="man_threatening_passerby_witha_knife">MAN THREATENING PASSERBY WITH A KNIFE</string>
    <string name="_1_2_km">-1.2 KM</string>
    <string name="jalan_bunga_raya">Jalan Bunga Raya</string>
    <string name="_2_mins_ago">2 mins ago</string>
    <string name="worry">worry</string>
    <string name="sad">sad</string>
    <string name="scary">scary</string>
    <string name="man_with_gun_reported_in_a_playground">Man with gun reported in a playground</string>
    <string name="worker_threatening_to_burn_down_building">Worker threatening to burn down building</string>
    <string name="jalan_sungai_baru">Jalan Sungai Baru</string>
    <string name="_5_2km">5.2Km</string>
    <string name="jalan_tun_mustapha">Jalan Tun Mustapha</string>
    <string name="_2_2km">2.2Km</string>
    <string name="_10_mins_ago">10 mins ago</string>
    <string name="_12_mins_ago">12 mins ago</string>
    <string name="_5_2_km">-5.2 KM</string>
    <string name="_2_2_km">-2.2 KM</string>
    <string name="man_threatening__passerby_with_a_knife">Man Threatening Passerby With A Knife</string>
    <string name="property_logs">Property Logs</string>
    <string name="add">add</string>
    <string name="iphone_12_n_03_09_2022_midvalley">Iphone 12 \n 03/09/2022 MidValley</string>
    <string name="sony_camera_n_29_06_2022_aquaria_klcc">Sony Camera \n 29/06/2022 Aquaria KLCC</string>
    <string name="name_of_item">Name of item :</string>
    <string name="when_was_it_lost">When was it lost :</string>
    <string name="where_was_it_lost">Where was it lost</string>
    <string name="brief_description_of_item">Brief description of item :</string>
    <string name="crime_prevention_tips">Crime prevention tips</string>
    <string name="at_home">At Home</string>
    <string name="driving">Driving</string>
    <string name="purse_wallet_protection">Purse/Wallet Protection</string>
    <string name="walking">Walking</string>
    <string name="list_of_property">List of property</string>
    <string name="list_of_property_">List of Property</string>
    <string name="go">GO</string>
</resources>