<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/dash_board"
        android:textColor="#FCFDFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="163dp"
        android:layout_height="111dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="#6B81C5"
        android:backgroundTintMode="src_in"
        app:cardBackgroundColor="#5C152667"
        app:cardCornerRadius="20dp"
        app:layout_anchor="@id/cardView"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="65dp"
            android:text="@string/noti_alert"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="127dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/alerts_image"
            android:src="@drawable/alert"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="163dp"
        android:layout_height="111dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="#6B81C5"
        android:backgroundTintMode="src_in"
        app:cardBackgroundColor="#5C152667"
        app:cardCornerRadius="20dp"
        app:layout_anchor="@id/cardView1"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="65dp"
            android:text="@string/crime_map"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="127dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/crime_map_desc"
            android:src="@drawable/location"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="163dp"
        android:layout_height="111dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="290dp"
        android:backgroundTint="#6B81C5"
        android:backgroundTintMode="src_in"
        app:cardBackgroundColor="#5C152667"
        app:cardCornerRadius="20dp"
        app:layout_anchor="@id/cardView3"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="65dp"
            android:text="@string/tips"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="127dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/tip"
            android:src="@drawable/lightbulb"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="163dp"
        android:layout_height="111dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="290dp"

        android:backgroundTint="#6B81C5"
        android:backgroundTintMode="src_in"
        app:cardBackgroundColor="#5C152667"
        app:cardCornerRadius="20dp"
        app:layout_anchor="@id/cardView4"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="65dp"
            android:text="@string/property_log"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="127dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/property"
            android:src="@drawable/cabin"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>