<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Crimemap">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="41dp"
        android:text="SMS notification"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="376dp"
        android:layout_height="452dp"
        android:layout_marginBottom="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525"
        app:srcCompat="@drawable/thumbnail" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="360dp"
        android:layout_height="111dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="#6B81C5"
        android:backgroundTintMode="src_in"
        app:cardBackgroundColor="#5C152667"
        app:cardCornerRadius="20dp"
        app:layout_anchor="@id/cardView3"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="31dp"
            android:layout_height="43dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/sad"
            app:srcCompat="@android:drawable/stat_sys_phone_call" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="31dp"
            android:layout_height="43dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/sad"
            app:srcCompat="@android:drawable/stat_notify_chat" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="50dp"
            android:text="@string/_12_mins_ago"
            android:textColor="#F8AFAF" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="50dp"
            android:text="@string/_5_2_km"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/jalan_sungai_baru"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/worker_threatening_to_burn_down_building"
            android:textColor="#FD4207"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>